# OCD_Slicer_Plugin

./: ProjectGuide.md  README.md  UserGuide.md
OpenCOVID_Detecter/: CMakeLists.txt
OpenCOVID_Detecter/CT_Annotate/: CMakeLists.txt  CT_Annotate.py  tmp
OpenCOVID_Detecter/CT_Annotate/Resources/UI/: CT_Annotate.ui
OpenCOVID_Detecter/CT_Characteristic/: CMakeLists.txt  CT_Characteristic.py  note.md
OpenCOVID_Detecter/CT_Characteristic/Resources/UI/: CT_Characteristic.ui
OpenCOVID_Detecter/CT_Detect/: CMakeLists.txt  CT_Detect.py  batch_process_py3.py  detect_py3.py  grad_cam_py3.py  server_py3.py
OpenCOVID_Detecter/CT_Detect/Batch/: Batch_GUI.ui  batch_GUI_py3.py  batch_main_py3.py  batch_process_py3.py
OpenCOVID_Detecter/CT_Detect/Front/: data_front.py
OpenCOVID_Detecter/CT_Detect/Resources/UI/: CT_Detect.ui
OpenCOVID_Detecter/CT_Detect/Utils/: data_py3.py  detect_py3.py  grad_cam_py3.py  net2d_py3.py  segment_py3.py  server_py3.py  test_py3.py
OpenCOVID_Detecter/CT_Detect/old/: LBL_CT_Detect(2).py  grad_cam_py3.py
